completed s3 static site creation with html and css files

--- a/s3-static-website/index.html
+++ b/s3-static-website/index.html
@@ -5,4 +5,4 @@
     </p>
 </div>
 
-<link rel="stylesheet" href="https://web-server-bucket-22138.s3-website-eu-west-2.amazonaws.com/style.css">
+<link rel="stylesheet" href="style.css">
