--- a/web-app/index.html
+++ b/web-app/index.html
@@ -1,1 +1,8 @@
-<h1>Hello and welcome to my Website</h1>
+<div class="Hello">
+    <h1>Hello and welcome to my Website</h1>
+    <p>
+        I hope you enjoy the contents of the site.
+    </p>
+</div>
+
+<link rel="stylesheet" href="style.css">
